tdf#154486: use importer-local map to deduplicate table names

... instead of SwDoc::GetUniqueTableName. The latter is expensive with
many tables, has O(n^2) complexity with rather large O, and in corner
cases of thousands tables with no or duplicate names, is unacceptably
slow.

Changes the test case import time from 39 s to 23 s on my system.

Change-Id: Ia461c860d56cbbfdcb25bacbb9cca4961ced885e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149817
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>